# arrow-mage

./: .cursorignore  .gitignore  Data_Sandbox_MCP.docx  FIXES.md  GITHUB_SETUP.md  LICENSE  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  README-visualization.md  README.md  app.py  benchmark_baseline.py  benchmark_crosslink.R  benchmark_crosslink.py  benchmark_results_100thou.csv  benchmark_results_arrow.csv  data_mcp.py  install_all.sh  mcp_server.py  requirements-visualization.txt  run_benchmark.sh  run_comparison.py  stream_info.json  test_arrow  test_arrow.R  test_arrow.cpp  test_arrow_header.cpp  test_arrow_loaders.py  test_claude_connection.py  test_cpp_core.py  test_direct.py  test_fused_local.py  test_r_bindings.R  test_streamlit_claude.py  test_temp_file.py
.streamlit/: config.toml
arrow-cache-mcp/: README.md  pyproject.toml
arrow-cache-mcp/arrow_cache_mcp/: __init__.py
arrow-cache-mcp/examples/: duckdb_import_example.py
arrow-cache-mcp/src/arrow_cache_mcp/: __init__.py  ai.py  core.py  duckdb_ingest.py  loaders.py  server.py  utils.py  visualization.py
duckdata/: .gitignore  MANIFEST.in  README.md  install.sh  pyproject.toml  setup.py  test_daemon.py
duckdata/cli/: __init__.py  main.py
duckdata/cli/commands/: run.py
duckdata/crosslink/: README.md  __init__.py  project_overview.txt
duckdata/crosslink/cpp/: CMakeLists.txt  __init__.py  build.py
duckdata/crosslink/cpp/bindings/: julia_binding.cpp  python_binding.cpp  r_binding.cpp
duckdata/crosslink/cpp/cmake/: FindJulia.cmake
duckdata/crosslink/cpp/core/: arrow_bridge.cpp  arrow_bridge.h  crosslink_config.cpp  crosslink_config.h  flight_client.cpp  flight_client.h  flight_server.cpp  flight_server.h  metadata_manager.cpp  metadata_manager.h  notification_system.cpp  shared_memory_manager.cpp  shared_memory_manager.h
duckdata/crosslink/cpp/examples/: CMakeLists.txt  flight_example.cpp
duckdata/crosslink/cpp/include/: crosslink.h
duckdata/crosslink/cpp/src/: crosslink.cpp
duckdata/crosslink/julia/: Project.toml  TODO_JULIA_BINDINGS.md  install_crosslink.jl  test.jl
duckdata/crosslink/julia/core/: core.jl
duckdata/crosslink/julia/data_operations/: data_operations.jl
duckdata/crosslink/julia/shared_memory/: cpp_wrapper.jl  shared_memory.jl
duckdata/crosslink/julia/src/: CrossLink.jl
duckdata/crosslink/python/: __init__.py  setup.py
duckdata/crosslink/python/arrow_integration/: __init__.py  arrow_integration.py
duckdata/crosslink/python/core/: core.py
duckdata/crosslink/python/crosslink/: __init__.py  flight_example.py
duckdata/crosslink/python/data_operations/: data_operations.py
duckdata/crosslink/python/metadata/: __init__.py
duckdata/crosslink/python/shared_memory/: cpp_wrapper.py  shared_memory.py
duckdata/crosslink/python/utilities/: utilities.py
duckdata/crosslink/r/: DESCRIPTION  Makevars  NAMESPACE  crosslink-package.R  crosslink.R
duckdata/crosslink/r/R/: RcppExports.R  crosslink-package.R  crosslink.R  data_operations.R
duckdata/crosslink/r/arrow_integration/: arrow_integration.R
duckdata/crosslink/r/core/: __init__.R  core.R
duckdata/crosslink/r/data_operations/: __init__.R  data_operations.R
duckdata/crosslink/r/libs/: crosslink_r.dylib
duckdata/crosslink/r/metadata/: __init__.R  metadata.R
duckdata/crosslink/r/shared_memory/: __init__.R  cpp_wrapper.R  shared_memory.R
duckdata/crosslink/r/src/: Makevars  RcppExports.cpp  crosslink.h  init.cpp  r_binding.cpp
duckdata/crosslink/r/utilities/: __init__.R  utilities.R
duckdata/examples/dag_pipeline/: README.md  pipeline.yml
duckdata/examples/dag_pipeline/scripts/: generate_data.py
duckdata/examples/data_connector_example/: README.md  large_dataset_streaming.R  large_dataset_streaming.py  pipeline.yml
duckdata/examples/data_connector_example/data/: products.csv  sample.csv
duckdata/examples/data_connector_example/scripts/: filter_data.py  generate_report.py
duckdata/examples/simple_pipeline/: README.md  debug_metadata.py  pipeline.yml  setup_julia.jl
duckdata/examples/simple_pipeline/crosslink_mmaps/: 39e4baff-811e-4f4c-8fe4-e4a15446954b.arrow
duckdata/examples/simple_pipeline/scripts/: analyze_data.jl  create_report.py  generate_data.py  transform_data.R
duckdata/jl-pipelink/: Project.toml
duckdata/jl-pipelink/src/: CLI.jl  CrossLink.jl  PipeLink.jl  PipeLinkNode.jl  PipelineDAG.jl  PipelineVisualizer.jl
duckdata/pipeduck/: README.md  __init__.py  cli.py  install.sh  pipeduck.py  setup.py  test_pipeline.yaml  zero_copy_pipeline.yaml
duckdata/pipeduck/dag/: __init__.py  builder.py  visualization.py
duckdata/pipeduck/duck_connect/: README.md  __init__.py
duckdata/pipeduck/duck_connect/core/: __init__.py  connection.py  facade.py  metadata.py  transactions.py
duckdata/pipeduck/julia/: Manifest.toml  Project.toml  README.md
duckdata/pipeduck/python/: README.md  __init__.py  duck_connector.py  duck_context.py
duckdata/pipeduck/r/: duck_connector.R
duckdata/pipeduck/resilience/: __init__.py  checkpointing.py  error_handling.py
duckdata/pipelink/: README.md  __init__.py  cli.py  dashboard_cli.py  start_daemons.sh
duckdata/pipelink/crosslink/: README.md  __init__.py
duckdata/pipelink/examples/: dask_node_example.py  optimized_pipeline.yaml
duckdata/pipelink/julia/: crosslink.jl  pipelink_node.jl
duckdata/pipelink/python/: __init__.py  dashboard.py  dask_context.py  data_connector.py  data_node_context.py  data_node_runner.py  language_daemon.py  monitoring.py  node_utils.py  pipeline_visualizer.py  pipelink.py
duckdata/r-pipelink/: DESCRIPTION  LICENSE  NAMESPACE
duckdata/r-pipelink/R/: crosslink.R  main.R  pipeline_visualizer.R  pipelink.R
duckdata/test_r_daemon/: meta.yaml  test_script.R
duckdata/tests/: README.md  conftest.py  run_tests.py
duckdata/tests/integration_tests/: test_cross_component_integration.py  test_s3_integration.py
duckdata/tests/pipeline_tests/: test_multi_language_pipeline.py
duckdata/tests/test_data/: generate_test_data.py
duckdata/tests/unit_tests/: test_crosslink.py  test_error_handling.py  test_pipelink.py
(+131 files in other folders)
